--- a/style.css
+++ b/style.css
@@ -217,7 +217,7 @@ footer {
   background-color: #333;
   color: #fff;
   padding: 2rem 0;
-  position: absolute;
+  position: fixed;
   bottom: 0;
   width: 100%;
 }
