--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 html {
@@ -8,7 +9,7 @@ html {
 }
 
 body {
-  background-color: rgb(255, 239, 209);
+  background-color: rgb(255, 255, 255);
   font-family: sans-serif;
 }
 
@@ -24,7 +25,7 @@ body {
 .top-sections a {
   color: white;
   text-decoration: none;
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   margin: 2rem;
 }
 
@@ -62,6 +63,7 @@ body {
   background: url("https://images.unsplash.com/photo-1501167786227-4cba60f6d58f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8YmFua3xlbnwwfHwwfHw%3D&w=1000&q=80")
     no-repeat center center/cover;
   border-radius: 0.5rem;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.9);
 }
 
 .login-section {
@@ -100,100 +102,157 @@ body {
   color: #bbb;
 }
 
+#login-btn {
+  font-size: 1rem;
+  padding: 0.8rem;
+  color: #fff;
+  background-color: green;
+  border: none;
+  border-radius: 0.5rem;
+
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  margin-right: 2rem;
+}
+
+#login-btn:hover {
+  background-color: orange;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.9);
+}
+
 /******* Main Section ******/
 
 .container {
+  width: 75%;
+  margin: 2rem auto;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  border: 2px solid orange;
-  border-radius: 1rem;
-  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
-  padding: 2rem;
-  background-color: white;
-  width: 85%;
-  margin: auto;
-  margin-top: 2rem;
-  margin-bottom: 2rem;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
 }
 
 .left-side {
-  flex: 1;
+  width: 100%;
+  max-width: 600px;
+  background-color: rgb(207, 203, 255);
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
+  padding: 2rem;
+  margin-bottom: 30px;
+  text-align: center;
 }
 
 .left-side h2 {
-  color: green;
-}
-
-.movement {
-  margin-bottom: 1rem;
-  border: 1px solid gray;
-  border-radius: 0.5rem;
-  padding: 1rem;
-}
-
-.movement h4 {
-  margin: 0;
-}
-
-.right-side {
-  flex: 1;
-  margin-left: 2rem;
-}
-
-.right-side h2 {
-  color: green;
-}
-
-.account-balance {
-  margin-bottom: 2rem;
-}
-
-.transfer {
-  border: 2px solid orange;
-  border-radius: 10px;
-  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
-  padding: 20px;
-  background-color: white;
-}
-.transfer h2 {
-  color: green;
-}
-
-.form-group {
+  font-size: 1.5rem;
+  color: #222;
   margin-bottom: 10px;
 }
 
-.form-group label {
-  display: block;
-  margin-bottom: 5px;
+#welcome-msg {
+  font-size: 2.5rem;
+  margin-bottom: 3rem;
 }
 
-.form-group input[type="text"] {
-  width: 100%;
-  padding: 5px;
-  border: 1px solid gray;
-  border-radius: 5px;
+.account-movements {
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
-button[type="submit"] {
+#header-movements {
+  margin-bottom: 2rem;
+}
+
+.account-movements li {
   display: flex;
-  background-color: orange;
-  color: white;
-  border: none;
-  margin-right: 1.5rem;
-  width: 7rem;
-  height: 2.5rem;
+  justify-content: space-around;
   align-items: center;
-  justify-content: center;
-  border-radius: 4.5rem;
-  padding: 1rem;
-  cursor: pointer;
-  transition: all 0.3s ease;
+  margin-bottom: 10px;
 }
 
-button[type="submit"]:hover {
+.account-movements li .date {
+  font-size: 1rem;
+  color: #000;
+}
+
+.account-movements li .description {
+  font-size: 1.3rem;
+  color: #222;
+  font-weight: bold;
+}
+
+.amount {
+  font-size: 1.3rem;
+  color: green;
+}
+
+.right-side {
+  width: 100%;
+  max-width: 400px;
+  background-color: rgb(207, 203, 255);
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
+  padding: 20px;
+  margin-bottom: 30px;
+}
+
+.right-side h2 {
+  font-size: 1.5rem;
+  color: #222;
+  margin-bottom: 10px;
+}
+
+.account-balance {
+  margin-bottom: 20px;
+}
+
+.balance {
+  font-size: 2rem;
+  color: green;
+  font-weight: bold;
+}
+
+.deposit-section form,
+.transfer-section form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.deposit-section label,
+.transfer-section label {
+  font-size: 1.2rem;
+  color: #222;
+  margin-bottom: 10px;
+}
+
+.deposit-section input,
+.transfer-section input {
+  font-size: 1rem;
+  color: #222;
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #ddd;
+  margin-bottom: 10px;
+  width: 100%;
+  max-width: 300px;
+}
+
+.deposit-section button,
+.transfer-section button {
+  font-size: 1rem;
+  color: #fff;
   background-color: green;
+  border: none;
+  border-radius: 5px;
+  padding: 10px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.deposit-section button:hover,
+.transfer-section button:hover {
+  background-color: orange;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
 }
 
 /***** Footer Section *****/
@@ -201,11 +260,10 @@ button[type="submit"]:hover {
 footer {
   background-color: #333;
   color: #fff;
-  padding: 2rem 0;
+  padding: 0.5rem 0;
   position: fixed;
   bottom: 0;
   width: 100%;
-  height: 0.5rem;
 }
 
 .footer-container {
@@ -241,7 +299,7 @@ nav a {
 
 @media screen and (min-width: 800px) {
   html {
-    font-size: 12px;
+    font-size: 13px;
   }
 
   .top-sections {
@@ -275,5 +333,13 @@ nav a {
 
   .input-section {
     flex-direction: row;
+  }
+
+  .left-side {
+    width: 45%;
+  }
+
+  .right-side {
+    width: 50%;
   }
 }
