--- a/style.css
+++ b/style.css
@@ -137,7 +137,7 @@ td {
 }
 
 th {
-  background-color: #ccc;
+  background-color: rgb(207, 203, 255);
 }
 
 .app {
@@ -170,7 +170,7 @@ th {
 }
 
 #welcome-msg {
-  font-size: 2.5rem;
+  font-size: 2.2rem;
   margin-bottom: 3rem;
 }
 
