--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
   background-color: #333;
   height: 3rem;
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
 }
 
@@ -46,13 +46,13 @@ body {
 }
 
 #logo {
-  width: 10rem;
+  width: 7rem;
   margin: 0.5rem;
 }
 
 #company-name {
   font-size: 4rem;
-  color: #01a000;
+  color: #0a014f;
 }
 
 .top-main-section {
@@ -71,11 +71,14 @@ body {
   align-items: center;
   justify-content: center;
   height: 10rem;
+  margin: 0.8rem;
 }
 
 .input-section {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .login__input {
@@ -103,16 +106,16 @@ body {
 }
 
 #login-btn {
-  font-size: 1rem;
-  padding: 0.8rem;
+  font-size: 1.2rem;
+  padding: 0.6rem;
   color: #fff;
-  background-color: green;
+  background-color: #0a014f;
   border: none;
   border-radius: 0.5rem;
-
+  width: 4rem;
   cursor: pointer;
   transition: background-color 0.3s ease;
-  margin-right: 2rem;
+  margin: 0.7rem;
 }
 
 #login-btn:hover {
@@ -284,7 +287,7 @@ tbody tr:hover {
 .transfer-section button {
   font-size: 1rem;
   color: #fff;
-  background-color: green;
+  background-color: #0a014f;
   border: none;
   border-radius: 5px;
   padding: 10px;
@@ -376,6 +379,11 @@ nav a {
 
   .input-section {
     flex-direction: row;
+  }
+
+  #login.btn {
+    margin-right: 0.7rem;
+    margin-left: 0;
   }
 
   .left-side {
